# TradingBot

./: .env.example  .gitignore  DEPLOYMENT.md  DEPLOYMENT_SUMMARY.md  GITHUB_DEPLOYMENT_COMPLETE.md  GITHUB_SECRETS_SETUP.md  PROJECT_SUMMARY.md  QUICKSTART.md  QUICK_START_ACTIONS.md  README.md  TESTING.md  demo.py  github-setup.bat  github-setup.sh  pyproject.toml  setup.bat  setup.sh
.github/workflows/: test-deploy.yml
trading_bot/: cli.py  requirements.txt
trading_bot/bot/: __init__.py  client.py  credentials.py  logging_config.py  orders.py  validators.py
